chore: some code cleaning